🐛 fix broken CSS property

--- a/static/app.css
+++ b/static/app.css
@@ -123,7 +123,7 @@ footer .footer-container {
     padding-inline: 1.5rem;
     max-width: var(--header-footer-content-width);
     width: 100%;
-    z    height: 100%;
+    height: 100%;
     margin-inline: auto;
 
     display: flex;
